<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>unipd.software.engineering</groupId>
	<artifactId>nonsense-generator</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>

	<name>nonsense-generator</name>
	<description>A project for generating nonsense sentences</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<junit.version>5.10.0</junit.version>
	</properties>

	<repositories>
		<!-- Looks for dependences in lib -->
		<repository>
			<id>project-local-repo</id>
			<url>file://${project.basedir}/lib</url>
		</repository>

		<!-- Otherwise downloads them from central repository -->
		<repository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<!-- Looks for dependences in lib -->
		<pluginRepository>
			<id>project-local-repo</id>
			<url>file://${project.basedir}/lib</url>
		</pluginRepository>

		<!-- Otherwise downloads them from central repository -->
		<pluginRepository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
		</pluginRepository>
	</pluginRepositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.cloud</groupId>
				<artifactId>google-cloud-language-bom</artifactId>
				<version>2.32.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- JUnit - Testing  -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>

		<!-- Google Cloud - Natural language -->
		<dependency>
			<groupId>com.google.cloud</groupId>
			<artifactId>google-cloud-language</artifactId>
			<version>2.32.0</version>
			<type>jar</type>
		</dependency>

		<!-- JSON formatting-->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
			<type>jar</type>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.20.0</version>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.20.0</version>
		</dependency>

		<dependency>
			<groupId>com.lmax</groupId>
			<artifactId>disruptor</artifactId>
			<version>3.4.4</version>
		</dependency>

		<!-- Mocking classes - Testing -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.13.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>5.13.0</version>
			<scope>test</scope>
		</dependency>

		<!-- CLI - Enhancement -->
		<dependency>
			<groupId>org.jline</groupId>
			<artifactId>jline</artifactId>
			<version>3.26.3</version>
		</dependency>
	</dependencies>

	<!-- Settings for building -->
	<build>
		<plugins>

			<plugin>
				<!-- Jar creation -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<archive>
						<manifest>
						<addClasspath>true</addClasspath>
						<mainClass>unipd.nonsense.App</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<!-- javadoc command via maven -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<doclint>none</doclint>
					<show>private</show>
					<source>21</source>
				</configuration>
				<executions>
					<execution>
						<id>generate-javadoc</id>
						<phase>package</phase>
						<goals>
							<goal>javadoc</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<!-- Testing engine -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.1</version>
					<configuration>
						<argLine>-XX:+EnableDynamicAgentLoading -DisTestEnv=true</argLine>
					</configuration>
				<dependencies>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>${junit.version}</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<!-- Resources and include management -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>copy-resources-files</id>
						<phase>process-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/resources</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}/src/main/resources</directory>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-test-resources-files</id>
						<phase>process-test-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/resources</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}/src/test/resources</directory>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<!-- Dependencies management -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs</outputDirectory>
							<includeScope>runtime</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<!-- Testing automatic report creation -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<linkXRef>false</linkXRef>
				</configuration>
				<executions>
					<execution>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*.json</include>
				</includes>
			</resource>

			<resource>
				<directory>${project.basedir}/config</directory>
				<includes>
					<include>**/*.json</include>
					<include>**/*.txt</include>
					<include>log4j2.xml</include>
				</includes>
				<excludes>
					<exclude>log4j2-test.xml</exclude>
				</excludes>
			</resource>
		</resources>

		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<includes>
					<include>**/*.json</include>
				</includes>
			</testResource>

			<testResource>
				<directory>${project.basedir}/config</directory>
				<includes>
					<include>log4j2-test.xml</include>
				</includes>
				<excludes>
					<exclude>log4j2.xml</exclude>
				</excludes>
			</testResource>
		</testResources>

		<directory>${project.basedir}/target</directory>
		<outputDirectory>${project.build.directory}/classes</outputDirectory>
		<testOutputDirectory>${project.build.directory}/test-classes</testOutputDirectory>
		<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
		<testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
		<finalName>${project.artifactId}-${project.version}</finalName>
	</build>
</project>
